src/main.css
/* ... */
#section6 h2 {
  text-transform: uppercase;
  font-size: 20px;
  width: 100%;
  text-align: center;
  color: #ea7927;
  background-color: #e1e1e1;
  display: inline-block;
  margin-bottom: 30px;
  position: relative;
}

#section6 h2 > span {
  background-color: #e1e1e1;
  position: relative;
  z-index: 2;
  padding: 0 15px;
}

#section6 h2:after {
  content: "";
  position: absolute;
  top: 0.5em;
  width: 100%;
  height: 1px;
  background-color: #ea7927;
  left: 0;
  z-index: 0;
}

#section6 section {
  margin-bottom: 2rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

#section6 section > a {
  margin: 1rem 1.5rem 3rem;
}

#section6 section img {
  max-height: 90px;
  max-width: 100%;
  vertical-align: middle;
}

@media (min-width: 758px) {
  .partners {
    margin-bottom: 1.5rem;
  }

  .partners .innovation-partners > * {
    flex: 1;
  }
}

#section7 {
  background-image: url("img/bg-smarthack.jpg");
  background-position: right;
  background-size: cover;
  background-attachment: fixed;
  height: 100%;
}

#section7 > div {
  width: 100%;
  height: 100%;
  background-image: url("img/footer-white-background.png");
  background-position: bottom;
  background-size: contain;
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#section7 > div h1 {
  text-transform: uppercase;
  font-weight: 300;
  margin-bottom: 30px;
  padding-bottom: 15px;
  position: relative;
  display: inline-block;
  color: #e1e1e1;
}

#section7 > div h1:before {
  content: "";
  width: 30%;
  border-bottom: solid 1px #ea7927;
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  margin: auto;
}

#section7 > div p {
  color: #e1e1e1;
  text-align: center;
  margin-bottom: 30px;
}

#section7 > div i {
  color: #ea7927;
  font-size: 60px;
  margin-right: 30px;
}

#section7 > div i.fa-envelope {
  font-size: 52px;
}

#section7 > div a,
#section7 > div span {
  color: #ea7927 !important;
  font-size: 24px;
}

#section7 > div .contact-links {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 15%;
}

#section7 > div .contact-links .contact-link {
  display: flex;
  align-items: center;
  padding: 12px 30px;
  transition: background-color 300ms ease;
  cursor: pointer;
}

#section7 > div .contact-links .contact-link:hover {
  background-color: #e1e1e1;
}

@media (max-width: 1200px) and (max-height: 700px) {
  #section1-container > .row:first-child {
    margin-bottom: 30px !important;
    padding-top: 60px;
  }
}

@media (min-width: 1600px) and (max-height: 900px) {
  #section1-container > .row:first-child {
    margin-bottom: 30px !important;
    padding-top: 60px;
  }
}

@media (min-width: 1200px) and (max-height: 800px) {
  #section1-container > .row:first-child {
    margin-bottom: 30px !important;
    padding-top: 60px;
  }
}

@media (max-width: 1200px) {
  #header nav {
    height: 80px;
  }
  #header nav a{
    letter-spacing: normal;
    font-weight: normal;
  }

  #header nav #menu > li > a {
    padding: 0 1.5em;
  }
  #start-concurs {
    font-size: 3vw;
  }
}

@media (min-width: 981px) and (max-width: 1200px) {
  #header nav {
    height: 70px !important;
  }

  #header nav #menu > li > a {
    height: 100%;
    padding: 0 1.5em;
    align-items: center;
  }


}


@media (min-width: 981px) {
  #header #section1-info {
    padding-top: 140px;
  }

  #header nav {
    background-color: #0a0f18e3;
  }

  #header nav #menu {
    display: flex;
    justify-content: flex-end;
    height: 100% !important;
  }

  #header nav #menu > li {
    display: flex;
    align-items: center;
    height: 100%;
  }

  #section6 section > div {
    margin: 1rem 2rem;
  }
}

@media (max-width: 980px) {
  #header nav {
    background-color: transparent;
  }

  #header nav #menu {
    position: absolute;
    padding: 0;
    display: flex;
    flex: 0;
    flex-direction: column;
    justify-content: flex-start;
    right: 15px;
    top: 0px;
    overflow: hidden;
    background-color: white;
    transition: all 300ms ease;
  }

  #header nav img {
    display: none;
  }

  #header nav #menu > li {
    display: block;
  }

  #header nav #menu > li > a {
    height: 80px;
    padding: 0px 30px;
    color: #2e4571 !important;
  }

  #header nav #menu > li.inscrie-te {
    height: auto;
  }

  #header nav .hamburger {
    display: flex;
  }

  #header nav .hamburger.active {
    color: #2e4571;
    right: 15px;
  }

  #header nav .hamburger.active > i:before {
    content: "\f00d";
  }

  #section5 .container .partener-box {
    margin-bottom: 15px;
  }

  #section5 .container .partener-box > div > div {
    background-color: white;
  }

  #section5 .container .partener-box > div > div > a {
    margin-top: 30px !important;
  }
}
/* ... */

